--- a/index.html
+++ b/index.html
@@ -1,88 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="image/logoright.svg">
-    
-    <title>MagicManHype</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="image/logoright.svg">
+        <title>MagicManHype</title>
+    </head>
 <body>
     <main>
-    <section class="section-1">
-        <nav class="nav-barre">
-            <div class="logo-magicmanhype">
-                <img class="logo-magicmanhype-items" src="image/mmhlogo.png" alt="">
+        <section class="section-1">
+            <nav class="nav-barre">
+                <div class="logo-magicmanhype">
+                    <img class="logo-magicmanhype-items" src="image/mmhlogo.png" alt="">
+                </div>
+                <ul class="nav_barre_items">
+                    <li><a href="">Road Map</a></li>
+                    <li><a href="">Utility</a></li>
+                    <li><a href="">Team</a></li>
+                    <li><a href="">How to mint</a></li>
+                </ul>
+                <div class="icon-barre">
+                    <a target="_blank" href="https://twitter.com/MagicManHype"><img src="image/twitter.png" alt=""></a>
+                    <a target="_blank" href="https://discord.gg/CDUYD48n"><img src="image/discord.png" alt=""></a>
+                    <a target="_blank" href=""><img src="image/opensea.png" alt=""></a>
+                </div>
+                <div class="button-mint-global">
+                    <button class="button-mint">Mint</button>
+                </div>
+            </nav>
+            <div class="section-mini-1">
+                <div class="cote-left" style="height:0%;">
+                    <div class="description" style="height:0%;">
+                        <h1 class="magicmanclub-title">
+                            Coming soon
+                        </h1>
+                        <p class="description-1">
+                            A story that begins.&nbsp;When utility becomes magic,&nbsp;join the magician club.
+                        </p>
+                        <p class="description-2" >
+                            The Magic Man Club (MMC) is a collection of 5,000 magic NFT 3D sailing on the Ethereum blockchain. By holding a Magic Man, you'll have exclusive access to a meta-verse game, exclusive ecosystem revenue (MMC), and other benefits as a member of the MMC.
+                        </p>
+                        <div class="button-mint-global2">
+                            <a class="button-mint2" href="" >Mint</a>
+                            <a class="button-discord" href="">Discord</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="cote-right">
+                    <div class="big-carre">
+                        <div class="mini-carre1"> <img src="image/logoright.svg" alt="logo mmh"></div>
+                    </div>
+                    <div class="mini-carre2">
+                        <div class="mini-carre-item"><img src="image/recycle.png" alt="image cycle"></div>
+                        <div class="mini-carre-item"><img src="image/personne.png" alt="personne"></div>
+                        <div class="mini-carre-item"><img src="image/community-ajoute.png" alt="community"></div>
+                        <div class="mini-carre-item"><img src="image/personne-ajoute.png" alt="add members"></div>
+                    </div>
+                    <div class="mini-carre3">
+                        <div class="mini-carre-item1"><img src="" alt=""></div>
+                        <div class="mini-carre-item2"><img src="" alt=""></div>
+                        <div class="mini-carre-item3"><img src="" alt=""></div>
+                        <div class="mini-carre-item4"><img src="" alt=""></div>
+                    </div>
+                </div>
             </div>
-            <ul class="nav_barre_items">
-                <li><a href="">Road Map</a></li>
-                <li><a href="">Utility</a></li>
-                <li><a href="">Team</a></li>
-                <li><a href="">How to mint</a></li>
-            </ul>
-            <div class="icon-barre">
-                <a target="_blank" href="https://twitter.com/MagicManHype"><img src="image/twitter.png" alt=""></a>
-                <a target="_blank" href="https://discord.gg/CDUYD48n"><img src="image/discord.png" alt=""></a>
-                <a target="_blank" href=""><img src="image/opensea.png" alt=""></a>
+        </section>
+        <span class="hr-fin-section1"></span>
+        <section class="section-2">
+            <div class="section_mini_2">
+                <h2 class="title-roadmap">Road Map</h2>
             </div>
-            <div class="button-mint-global">
-                <buttont class="button-mint">Mint</button>
+            <div>
+                <p></p>
             </div>
-        </nav>
-    <div class="section-mini-1">
-    <div class="cote-left" style="height:0%;">
-        <div class="description" style="height:0%;">
-            <h1 class="magicmanclub-title">
-                Coming soon
-            </h1>
-            <p class="description-1">
-                A story that begins.&nbsp;When utility becomes magic,&nbsp;join the magician club.
-            </p>
-            <p class="description-2" >
-                The Magic Man Club (MMC) is a collection of 5,000 magic NFT 3D sailing on the Ethereum blockchain. By holding a Magic Man, you'll have exclusive access to a meta-verse game, exclusive ecosystem revenue (MMC), and other benefits as a member of the MMC.
-            </p>
-            <div class="button-mint-global2">
-                <a href=""><button class="button-mint2">Mint</button></a>
-                <a href=""><button class="button-discord">Discord</button></a>
-            </div>
-        </div>
-    </div>
-    <div class="cote-right">
-        <div class="big-carre">
-            <div class="mini-carre1"> <img role="presentation" src="image/logoright.svg" alt=""></div>
-        </div>
-        <div class="mini-carre2">
-            <div class="mini-carre-item"><img src="image/recycle.png" alt=""></div>
-            <div class="mini-carre-item"><img src="image/personne.png" alt=""></div>
-            <div class="mini-carre-item"><img src="image/community-ajoute.png" alt=""></div>
-            <div class="mini-carre-item"><img src="image/personne-ajoute.png" alt=""></div>
-        </div>
-        <div class="mini-carre3">
-            <div class="mini-carre-item1"><img src="" alt=""></div>
-            <div class="mini-carre-item2"><img src="" alt=""></div>
-            <div class="mini-carre-item3"><img src="" alt=""></div>
-            <div class="mini-carre-item4"><img src="" alt=""></div>
-        </div>
-        <div class="button-right">
-            <button class="annotation1 button-right1">Magic Man Club</button>
-            <button class="annotation2 button-right2">Community</button>
-            <button class="annotation3 button-right3">Project</button>
-        </div>
-    </div>
-    </div>
-    </section>
-    <span class="hr-fin-section1"></span>
-    <section class="section-2">
-        <div class="section_mini_2">
-        <h2 class="title-roadmap">Road Map</h2>
-        <p></p>
-        </div>
-    </section>
+        </section>
     </main>
 </body>
 </html>
