--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="responsive.css">
         <link rel="icon" href="image/logoright.svg">
-        <title>MagicManHype</title>
+        <title>MagicManClub</title>
     </head>
 <body>
     <main>
-        <section class="section-1">
+        <header>
             <nav class="nav-barre">
                 <div class="logo-magicmanhype">
                     <img class="logo-magicmanhype-items" src="image/mmhlogo.png" alt="">
                 </div>
                 <ul class="nav_barre_items">
-                    <li><a href="">Road Map</a></li>
+                    <li><a href="#">Road Map</a></li>
                     <li><a href="">Utility</a></li>
                     <li><a href="">Team</a></li>
                     <li><a href="">How to mint</a></li>
+                    <li><a href="">FAQ</a></li>
                 </ul>
                 <div class="icon-barre">
                     <a target="_blank" href="https://twitter.com/MagicManHype"><img src="image/twitter.png" alt=""></a>
@@ -33,6 +35,8 @@
                     <button class="button-mint">Mint</button>
                 </div>
             </nav>
+        </header>   
+        <section class="section-1">
             <div class="section-mini-1">
                 <div class="cote-left" style="height:0%;">
                     <div class="description" style="height:0%;">
@@ -69,16 +73,49 @@
                     </div>
                 </div>
             </div>
+            <span class="hr-fin-section1"></span>
         </section>
-        <span class="hr-fin-section1"></span>
         <section class="section-2">
-            <div class="section_mini_2">
-                <h2 class="title-roadmap">Road Map</h2>
-            </div>
-            <div>
-                <p></p>
-            </div>
+            <div class="section-mini-2"></div>
+            <span class="hr-fin-section2"></span>
         </section>
+        <span class="hr-fin-section2"></span>
+        <section class="section-3">
+            <div class="section_mini_3">
+                <div class="en-tete-roadmap">
+                    <h2 class="title-roadmap">Road Map</h2>
+                    <p class="description-roadmap">In the MMC universe there are several magicians with different powers, rumor has it that a top secret magic ball was abandoned by their leader named Leon. myself and counting on my powers, are determined to explode the details, which are all unknown until now. Find the Magic ball that will make you the new leader.</p>
+                </div>
+                <div class="fenetre-roadmap">
+                    <span class="premiere-ligne-icon">
+                        <img class="icon-violet" src="image/icon-roadmap-violet.png" alt="" >
+                        <img class="icon-vert" src="image/icon-roadmap-vert.png" alt="">
+                        <img class="icon-rouge" src="image/icon-roadmap-rouge.png" alt="">
+                        <img class="icon-bleu" src="image/icon-roadmap-blue.png" alt="">
+                    </span>
+                    <span class="premiere-ligne-a">
+                        <a class="child-1">Launch of advertising campaigns.</a>
+                        <a class="child-2">Development of the metaverse video game and token (MMC).</a>
+                        <a class="child-3">Show the first 3D artistic insights.</a>
+                        <a class="child-4">Organize educational activities and community entertainment.</a>
+                    </span>
+                    <span class="deuxieme-ligne-icon">
+                        <img class="icon-orange" src="image/icon-roadmap-orange.png" alt="">
+                        <img class="icon-rose" src="image/icon-roadmap-rose.png" alt="">
+                        <img class="icon-jaune" src="image/icon-roadmap-jaune.png" alt="">
+                        <img class="icon-bleu-ciel" src="image/icon-roadmap-bleu-ciel.png" alt="">
+                    </span>
+                    <span class="deuxieme-ligne-a">
+                        <a class="child-5">Get ready for the Official Mint Collection of MagicManClub.</a>
+                        <a class="child-6">Organize events reserved for holders.</a>
+                        <a class="child-7">Launching the (MMC) token and Metavers video game.</a>
+                        <a class="child-8">Bring your 3D character to life in the metaverse video game by expanding your corners to swap them with a token MMC.</a>
+                    </span>
+                </div>
+        </section>
+        <span class="hr-fin-section3"></span>
+
+        
     </main>
 </body>
 </html>
