--- a/index.html
+++ b/index.html
@@ -122,12 +122,88 @@
         </section>
         <section class="section-6">
             <div class="section-mini-6">
-                
+                <div>
+                    TOM @TMW_BUIDLS
+                    DEV & CO-CRÉATEUR
+                    Le savant fou est devenu bon. 
+                    Diriger le développement technique chez L'univers MagicManClub, 
+                    construire une technologie de pointe pour améliorer 
+                    l’expérience Magic.
+
+
+                    JOE @WHATHEFURR
+                    ARTISTE ET CO-CRÉATEUR
+                    Mener des expériences créatives dans le 
+                    laboratoire. Travailler dans une pièce sombre 
+                    pour donner vie à de nouvelles idées et identifier
+                    le nombre croissant de traits possédés.
+                </div>
             </div>
         </section>
         <section class="section-7">
             <div class="section-mini-7">
-                
+                <h2 class="faq-title">FAQ</h2>
+                <div class="question">
+                    <div class="container-question">
+
+                        <div class="question-1">
+                            <div class="question1-separation-faq">
+                                <h1>What is The MagicManClub?</h1>
+                                <img src="" alt="">
+                            </div>
+                            <p class="paragraphe-question-1"></p>
+                        </div>
+
+                        <div class="question-2">
+                            <div class="question2-separation-faq">
+                                <h1>What do I get with NFT?</h1>
+                                <img src="" alt="">
+                            </div>
+                            <p class="paragraphe-question-2"></p>
+                        </div>
+
+                        <div class="question-3">
+                            <div class="question3-separation-faq">
+                                <h1>When did MagicManClub mint?</h1>
+                                <img src="" alt="">
+                            </div>
+                            <p class="paragraphe-question-3">To be announced.</p>
+                        </div>
+
+                        <div class="question-4">
+                            <div class="question4-separation-faq">
+                                <h1>What is the utility of MagicManClub?</h1>
+                                <img src="" alt="">
+                            </div>
+                            <p class="paragraphe-question-4">you'll have exclusive access to a meta-verse game, exclusive ecosystem revenue (MMC), and other benefits as a member of the MMC.</p>
+                        </div>
+
+                        <div class="question-5">
+                            <div class="question5-separation-faq">
+                                <h1>Is there a Discord?</h1>
+                                <img src="" alt="">
+                            </div>
+                            <p class="paragraphe-question-5">The MagicManClub Univers is now open. You can enter <a href="">here</a>.</p>
+                        </div>
+
+                        <div class="question-6">
+                            <div class="question6-separation-faq">
+                                <h1>Que sont les different?</h1>
+                                <img src="" alt="">
+                            </div>
+                            <p class="paragraphe-question-6"></p>
+                        </div>
+
+                        <div class="question-7">
+                            <div class="question7-separation-faq">
+                                <h1>How do I stay updated and safe?</h1>
+                                <img src="" alt="">
+                            </div>
+                            <p class="paragraphe-question-7">Follow the official Twitter account of MagicManClub. All the announcements will be made there. We will never surprise the mint. Beware of imitators, scammers and always check that you are on the official Twitter or website.</p>
+                        </div>
+
+                    </div>
+                </div>
             </div>
         </section>
         <section class="section-8">
