--- a/index.html
+++ b/index.html
@@ -9,208 +9,149 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="responsive.css">
-        <link rel="icon" href="image/logoright.svg">
-        <title>MagicManClub</title>
+        <link rel="icon" href="image/logo.svg">
+        <title>MagicManClub&nbsp;|&nbsp;5.000 NFT Collection</title>
     </head>
-<body>
-    <main>
-        <header>
-            <nav class="nav-barre">
-                <div class="logo-magicmanhype">
-                    <img class="logo-magicmanhype-items" src="image/mmhlogo.png" alt="">
-                </div>
-                <ul class="nav_barre_items">
-                    <li><a href="#roadmap">Road Map</a></li>
-                    <li><a href="#utility">Utility</a></li>
-                    <li><a href="#team">Team</a></li>
-                    <li><a href="howtomint">How to mint</a></li>
-                    <li><a href="faq">FAQ</a></li>
-                </ul>
-                <div class="icon-barre">
-                    <a target="_blank" href="https://twitter.com/MagicManHype"><img src="image/twitter.png" alt=""></a>
-                    <a target="_blank" href="https://discord.gg/CDUYD48n"><img src="image/discord.png" alt=""></a>
-                    <a target="_blank" href=""><img src="image/opensea.png" alt=""></a>
-                </div>
-                <div class="button-mint-global">
-                    <button class="button-mint">Mint</button>
-                </div>
-            </nav>
-        </header>   
-        <section class="section-1">
-            <div class="section-mini-1">
-                <div class="cote-left" style="height:0%;">
-                    <div class="description" style="height:0%;">
-                        <h1 class="magicmanclub-title">
-                            Coming soon
-                        </h1>
-                        <p class="description-1">
-                            A story that begins.&nbsp;When utility becomes magic,&nbsp;join the magician club.
-                        </p>
-                        <p class="description-2" >
-                            The Magic Man Club (MMC) is a collection of 5,000 magic NFT 3D sailing on the Ethereum blockchain. By holding a Magic Man, you'll have exclusive access to a meta-verse game, exclusive ecosystem revenue (MMC), and other benefits as a member of the MMC.
-                        </p>
-                        <div class="button-mint-global2">
-                            <a class="button-mint2" href="" >Mint</a>
-                            <a class="button-discord" href="">Discord</a>
+    <body>
+        <main>
+            <header>
+                <nav class="nav-barre">
+                    <div class="logo-magicmanhype">
+                        <img class="logo-magicmanhype-items" src="image/mmhlogo.png" alt="">
+                    </div>
+                    <ul class="nav_barre_items">
+                        <li><a href="#roadmap">Road Map</a></li>
+                        <li><a href="#utility">Utility</a></li>
+                        <li><a href="#team">Team</a></li>
+                        <li><a href="howtomint">How to mint</a></li>
+                        <li><a href="faq">FAQs</a></li>
+                    </ul>
+                    <div class="icon-barre">
+                        <a target="_blank" href="https://twitter.com/MagicManHype"><img src="image/twitter.png" alt=""></a>
+                        <a target="_blank" href="https://discord.gg/CDUYD48n"><img src="image/discord.png" alt=""></a>
+                        <a target="_blank" href=""><img src="image/opensea.png" alt=""></a>
+                    </div>
+                    <div class="button-mint-global">
+                        <button class="button-mint">Mint</button>
+                    </div>
+                </nav>
+            </header>   
+            <section class="section-1">
+                <div class="section-mini-1">
+                    <div class="cote-left" style="height:0%;">
+                        <div class="description" style="height:0%;">
+                            <h1 class="magicmanclub-title">
+                                Coming soon
+                            </h1>
+                            <p class="description-1">
+                                A story that begins.&nbsp;When utility becomes magic,&nbsp;join the magician club.
+                            </p>
+                            <p class="description-2" >
+                                The Magic Man Club (MMC) is a collection of 5,000 magic NFT 3D sailing on the Ethereum blockchain. By holding a Magic Man, you'll have exclusive access to a meta-verse game, exclusive ecosystem revenue (MMC), and other benefits as a member of the MMC.
+                            </p>
+                            <div class="button-mint-global2">
+                                <a class="button-mint2" href="" >Mint</a>
+                                <a class="button-discord" href="">Discord</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cote-right">
+                        <div class="big-carre">
+                            <div class="mini-carre1"> <img src="image/logo.svg" alt="logo mmh"></div>
+                        </div>
+                        <div class="mini-carre2">
+                            <div class="mini-carre-item"><img src="image/recycle.png" alt="image cycle"></div>
+                            <div class="mini-carre-item"><img src="image/personne.png" alt="personne"></div>
+                            <div class="mini-carre-item"><img src="image/community-ajoute.png" alt="community"></div>
+                            <div class="mini-carre-item"><img src="image/personne-ajoute.png" alt="add members"></div>
+                        </div>
+                        <div class="mini-carre3">
+                            <div class="mini-carre-item1"><img src="" alt=""></div>
+                            <div class="mini-carre-item2"><img src="" alt=""></div>
+                            <div class="mini-carre-item3"><img src="" alt=""></div>
+                            <div class="mini-carre-item4"><img src="" alt=""></div>
                         </div>
                     </div>
                 </div>
-                <div class="cote-right">
-                    <div class="big-carre">
-                        <div class="mini-carre1"> <img src="image/logoright.svg" alt="logo mmh"></div>
-                    </div>
-                    <div class="mini-carre2">
-                        <div class="mini-carre-item"><img src="image/recycle.png" alt="image cycle"></div>
-                        <div class="mini-carre-item"><img src="image/personne.png" alt="personne"></div>
-                        <div class="mini-carre-item"><img src="image/community-ajoute.png" alt="community"></div>
-                        <div class="mini-carre-item"><img src="image/personne-ajoute.png" alt="add members"></div>
-                    </div>
-                    <div class="mini-carre3">
-                        <div class="mini-carre-item1"><img src="" alt=""></div>
-                        <div class="mini-carre-item2"><img src="" alt=""></div>
-                        <div class="mini-carre-item3"><img src="" alt=""></div>
-                        <div class="mini-carre-item4"><img src="" alt=""></div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="section-2">
-            <div class="section-mini-2"></div>
-        </section>
-        <section  id="roadmap" class="section-3">
-            <div  class="section_mini_3">
+            </section>
+            <hr class="hr-fin-section2">
+            <section class="section-2">
+                <div class="section-mini-2"></div>
+            </section>
+            <hr class="hr-fin-section2">
+            <section  id="roadmap" class="section-3">
                 <div class="en-tete-roadmap" >
                     <h2 class="title-roadmap">Road Map</h2>
                     <p class="description-roadmap">In the MMC universe there are several magicians with different powers, rumor has it that a top secret magic ball was abandoned by their leader named Leon. myself and counting on my powers, are determined to explode the details, which are all unknown until now. Find the Magic ball that will make you the new leader.</p>
                 </div>
-                <div class="fenetre-roadmap">
-                    <span class="premiere-ligne-icon">
-                        <img class="icon-violet" src="image/icon-roadmap-violet.png" alt="" >
-                        <img class="icon-vert" src="image/icon-roadmap-vert.png" alt="">
-                        <img class="icon-rouge" src="image/icon-roadmap-rouge.png" alt="">
-                        <img class="icon-bleu" src="image/icon-roadmap-blue.png" alt="">
-                    </span>
-                    <span class="premiere-ligne-a">
-                        <a class="child-1">Launch of advertising campaigns.</a>
-                        <a class="child-2">Development of the metaverse video game and token (MMC).</a>
-                        <a class="child-3">Show the first 3D artistic insights.</a>
-                        <a class="child-4">Organize educational activities and community entertainment.</a>
-                    </span>
-                    <span class="deuxieme-ligne-icon">
-                        <img class="icon-orange" src="image/icon-roadmap-orange.png" alt="">
-                        <img class="icon-rose" src="image/icon-roadmap-rose.png" alt="">
-                        <img class="icon-jaune" src="image/icon-roadmap-jaune.png" alt="">
-                        <img class="icon-bleu-ciel" src="image/icon-roadmap-bleu-ciel.png" alt="">
-                    </span>
-                    <span class="deuxieme-ligne-a">
-                        <a class="child-5">Get ready for the Official Mint Collection of MagicManClub.</a>
-                        <a class="child-6">Organize events reserved for holders.</a>
-                        <a class="child-7">Launching the (MMC) token and Metavers video game.</a>
-                        <a class="child-8">Bring your 3D character to life in the metaverse video game by expanding your corners to swap them with a token MMC.</a>
-                    </span>
-                </div>
-        </section>
-        <section class="section-4">
-            <div class="section-mini-4">
-
-            </div>
-        </section>
-        <section class="section-5">
-            <div class="section-mini-5">
-                
-            </div>
-        </section>
-        <section class="section-6">
-            <div class="section-mini-6">
-                <div>
-                    TOM @TMW_BUIDLS
-                    DEV & CO-CRÉATEUR
-                    Le savant fou est devenu bon. 
-                    Diriger le développement technique chez L'univers MagicManClub, 
-                    construire une technologie de pointe pour améliorer 
-                    l’expérience Magic.
-
-
-                    JOE @WHATHEFURR
-                    ARTISTE ET CO-CRÉATEUR
-                    Mener des expériences créatives dans le 
-                    laboratoire. Travailler dans une pièce sombre 
-                    pour donner vie à de nouvelles idées et identifier
-                    le nombre croissant de traits possédés.
-                </div>
-            </div>
-        </section>
-        <section class="section-7">
-            <div class="section-mini-7">
-                <h2 class="faq-title">FAQ</h2>
-                <div class="question">
-                    <div class="container-question">
-
-                        <div class="question-1">
-                            <div class="question1-separation-faq">
-                                <h1>What is The MagicManClub?</h1>
-                                <img src="" alt="">
-                            </div>
-                            <p class="paragraphe-question-1"></p>
+                <div class="container-roadmap">
+                    <div class="block1-roadmap">
+                        <div class="block1-roadmap-mini">
+                            <button>STEP 1</button>
+                            <h1>MagicManClub Launch</h1>
+                            <p>Launch of advertising campaigns.</p>
+                            <img src="image/roadmap-fleche.png" alt="">
                         </div>
-
-                        <div class="question-2">
-                            <div class="question2-separation-faq">
-                                <h1>What do I get with NFT?</h1>
-                                <img src="" alt="">
-                            </div>
-                            <p class="paragraphe-question-2"></p>
+                    </div>
+                    <script src="script.js"></script>
+                    <div class="block2-roadmap">
+                        <div class="block2-roadmap-mini">
+                            <button>STEP 2</button>
+                            <h1>Eco-system Development</h1>
+                            <p>Development of the metaverse video game and token (MMC).</p>
+                            <img src="image/roadmap-fleche.png" alt="">
                         </div>
-
-                        <div class="question-3">
-                            <div class="question3-separation-faq">
-                                <h1>When did MagicManClub mint?</h1>
-                                <img src="" alt="">
-                            </div>
-                            <p class="paragraphe-question-3">To be announced.</p>
+                    </div>
+                    <div class="block3-roadmap">
+                        <div class="block3-roadmap-mini">
+                            <button>STEP 3</button>
+                            <h1>Design</h1>
+                            <p>Show the first 3D artistic insights.</p>
+                            <img src="image/roadmap-fleche.png" alt="">
                         </div>
-
-                        <div class="question-4">
-                            <div class="question4-separation-faq">
-                                <h1>What is the utility of MagicManClub?</h1>
-                                <img src="" alt="">
-                            </div>
-                            <p class="paragraphe-question-4">you'll have exclusive access to a meta-verse game, exclusive ecosystem revenue (MMC), and other benefits as a member of the MMC.</p>
+                    </div>
+                    <div class="block4-roadmap">
+                        <div class="block4-roadmap-mini">
+                            <button>STEP 4</button>
+                            <h1>Partenariats Metaverse</h1>
+                            <p>Exploring partnerships with established metaverse projects Further CEX listings Additional P2E Giveaways.</p>
+                            <img src="image/roadmap-fleche.png" alt="">
                         </div>
-
-                        <div class="question-5">
-                            <div class="question5-separation-faq">
-                                <h1>Is there a Discord?</h1>
-                                <img src="" alt="">
-                            </div>
-                            <p class="paragraphe-question-5">The MagicManClub Univers is now open. You can enter <a href="">here</a>.</p>
+                    </div>
+                    <div class="block5-roadmap">
+                        <div class="block5-roadmap-mini">
+                            <button>STEP 5</button>
+                            <h1>Mint</h1>
+                            <p>Get ready for the Official Mint Collection of MagicManClub.</p>
+                            <img src="image/roadmap-fleche.png" alt="">
                         </div>
-
-                        <div class="question-6">
-                            <div class="question6-separation-faq">
-                                <h1>Que sont les different?</h1>
-                                <img src="" alt="">
-                            </div>
-                            <p class="paragraphe-question-6"></p>
+                    </div>
+                    <div class="block6-roadmap">
+                        <div class="block6-roadmap-mini">
+                            <button>STEP 6</button>
+                            <h1>Events</h1>
+                            <p>Organize events reserved for holders.</p>
+                            <img src="image/roadmap-fleche.png" alt="">
                         </div>
-
-                        <div class="question-7">
-                            <div class="question7-separation-faq">
-                                <h1>How do I stay updated and safe?</h1>
-                                <img src="" alt="">
-                            </div>
-                            <p class="paragraphe-question-7">Follow the official Twitter account of MagicManClub. All the announcements will be made there. We will never surprise the mint. Beware of imitators, scammers and always check that you are on the official Twitter or website.</p>
+                    </div>
+                    <div class="block7-roadmap">
+                        <div class="block7-roadmap-mini">
+                            <button>STEP 7</button>
+                            <h1>Launch games and token</h1>
+                            <p>Launching the (MMC) token and Metavers video game.</p>
+                            <img src="image/roadmap-fleche.png" alt="">
                         </div>
-
+                    </div>
+                    <div class="block8-roadmap">
+                        <div class="block8-roadmap-mini">
+                            <button>STEP 8</button>
+                            <h1>Game</h1>
+                            <p>Bring your 3D character to life in the metaverse video game by expanding your corners to swap them with a token MMC.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
-        <section class="section-8">
-            <div class="section-mini-8">
-
-            </div>
-        </section>        
-    </main>
-</body>
+            </section>
+            <hr class="hr-fin-section3">
+        </main>
+    </body>
 </html>
